Deluge 1.1.0 - "" (In Development)
 Core:
  * Implement #79 ability to change outgoing port range
  * Implement #296 ability to change peer TOS byte
  * Add per-torrent move on completed settings
  * Implement #414 use async save_resume_data method
  * FilterManager with torrent filtering in get_torrents_status , for sidebar and plugins.
  * Implement #368 add torrents by infohash/magnet uri (trackerless torrents)
  * Remove remaining gtk functions in common
  * Tracker icons.

 GtkUI:
  * Add peer progress to the peers tab
  * Add ability to manually add peers
  * Sorting # column will place downloaders above seeds
  * Remove dependency on libtorrent for add torrent dialog
  * Allow adding multiple trackers at once in the edit tracker dialog
  * Implement #28 Create Torrent Dialog
  * Redesiged sidebar with filters for Active and Tracker (see FilterManager)
  * Implement #428 the ability to rename files and directories
  * Implement #229 add date added column

 WebUi:
  * Lots of smaller tweaks.
  * All details tabs have the same features as in gtk-ui 1.0.x
  * Persistent sessions #486
  * Plugin improvements for easy use of templates and images in eggs. #497
  * Classic template takes over some style elements from white template.
  * https (for users that know how to create certificates)
  * Easier apache mod_proxy use.
  * Redesigned sidebar

 AjaxUI:
  * Hosted in a webui template.

 ConsoleUI:
  * New ConsoleUI written by Idoa01
  * Callable from command-line for scripts.

 Plugins:
  * Stats plugin for graphs.
  * Label plugin for grouping torrents and per torrent settings.

 Misc:
  * Implement #478 display UI options in usage help